add_library(CommandManagerLib CommandController.cpp CommandController.h ICommand.h CommandInfo.h CommandParser.cpp CommandParser.h CommandRegistration.cpp CommandRegistration.h Commands/HelpCommand.cpp Commands/HelpCommand.h Commands/ReadCommand.cpp Commands/ReadCommand.h Commands/EchoCommand.cpp Commands/EchoCommand.h Commands/ConvertCommand.cpp Commands/ConvertCommand.h Commands/SortCommand.cpp Commands/SortCommand.h)